# RAG-Inspector

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  answer_evaluator.py  question_generator.py  reporter.py  scorer.py
backend/app/storage/: __init__.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/pages/: Upload.tsx
tests/: test_reporter.py  test_scorer.py  test_utils.py
